Add shader wrapper class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(gl-forge STATIC
     application.hpp application.cpp
     window.hpp window.cpp
     camera.hpp camera.cpp
+    shader.hpp shader.cpp
 )
 
 target_link_libraries(gl-forge PRIVATE glad::glad glfw glm::glm imgui::imgui)
