--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(gl-forge STATIC
     vertex_array.hpp vertex_array.cpp
     vertex_buffer.hpp vertex_buffer.cpp
     index_buffer.hpp index_buffer.cpp
+    texture.hpp texture.cpp
 )
 
 target_link_libraries(gl-forge PRIVATE glad::glad glfw glm::glm imgui::imgui)
