Add texture sampler objects

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(gl-forge STATIC
     vertex_buffer.hpp vertex_buffer.cpp
     index_buffer.hpp index_buffer.cpp
     texture.hpp texture.cpp
+    texture_sampler.hpp texture_sampler.cpp
 )
 
 target_link_libraries(gl-forge PRIVATE glad::glad glfw glm::glm imgui::imgui)
